# guildr

./: .gitignore  LICENSE  README.md  config.example.yaml  install.sh  pyproject.toml  record_live_demo.sh  sprint-plan.md
analysis/: 04-22-2026-FEEDBACK.md
assets/: README.md
docs/: AGENT_IN_PROGRESS_MEMORY_DUMP.md  architecture.md  cost-tracking.md  demo-ceremony-and-replay-evidence.md  design-review-protocol.md  founding-team-consultation-design.md  getting-started.md  implementation-roadmap.md  pitch-deck.md  pwa-narrative-replay-and-intervention-design.md  pwa-narrative-replay-claude-opus-feedback.md  sdlc-loop-visualization.md  spatial-flow-universe-design.md  sprint-plan-council-pwa.md  srs-council-engine.md  threejs-asset-pipeline.md  threejs-client-architecture.md  threejs-integration-plan.md  threejs-product-direction.md  ux-interaction-model.md  visual-grammar.md
orchestrator/: __main__.py  engine.py
project-management/: AGENT_ONBOARDING.md  DIRECTION_GUARDRAILS.md  HANDOVER_2026-04-22_BRAIN_DUMP.md  HANDOVER_H6.md  HANDOVER_M02B.md  M10-functional-orchestration-surface.md  README.md  STATUS.md
scripts/: demo.mjs  package.json  record_demo.sh
tests/: test_architect_escalate.py  test_architect_gen.py  test_architect_judge.py  test_architect_passes.py  test_architect_plan_refine_split.py  test_artifact_preview.py  test_budget.py  test_cli_run.py  test_coder.py  test_config.py  test_consult_deterministic.py  test_consult_engine_wiring.py  test_consult_model.py  test_consult_provider.py  test_consult_routing.py  test_demo.py  test_demo_capture.py  (+53 more)
(+219 files in other folders)
